# ros_opcua_communication

./: .gitignore  .gitmodules  .travis.before.bash  .travis.yml  README.md  build.doxyfile
.github/workflows/: ci.yml  ci2.yml
doc/: manifest.yaml
doc/html/: graph_legend.html  index-msg.html  index.html
doc/html/srv/: CallMethod.html  Connect.html  Disconnect.html  ListNode.html  Read.html  Subscribe.html  Unsubscribe.html  Write.html
html/: annotated.html  annotated.js  classSubClient-members.html  classSubClient.html  classSubClient.js  classes.html  classros__server_1_1OpcUaROSTopic-members.html  classros__server_1_1OpcUaROSTopic.html  classros__server_1_1OpcUaROSTopic.js  classstruct-members.html  classstruct.html  classstruct.js  dir_0937a7c96528d61f6c8ab643aae9de57.html  dir_0937a7c96528d61f6c8ab643aae9de57.js  dir_149aa1c311102029a782885cd607afb9.html  dir_149aa1c311102029a782885cd607afb9.js  dir_26b0f48eeea3539b761bb8a658d9a299.html  dir_26b0f48eeea3539b761bb8a658d9a299.js  dir_43b0dc4784f4035c76d36ea73508d404.html  dir_43b0dc4784f4035c76d36ea73508d404.js  dir_65a7e820554b419e0949e2e7c89309c0.html  dir_65a7e820554b419e0949e2e7c89309c0.js  dir_a53a92e2cc871fbe31d54f7c5325ed12.html  dir_a53a92e2cc871fbe31d54f7c5325ed12.js  dir_a6ef7f594683228b41e71c217726a752.html  dir_a6ef7f594683228b41e71c217726a752.js  dir_be8717bb93a28fef381c4d5abb089632.html  dir_be8717bb93a28fef381c4d5abb089632.js  files.html  files.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  hierarchy.js  index.html  namespacemembers.html  (+27 more)
html/search/: all_1.js  classes_0.js  search.js
opcua_communication/: CMakeLists.txt  package.xml
opcua_impl_freeopcua/: CMakeLists.txt  package.xml
opcua_impl_freeopcua/include/: opcua_helpers.h
opcua_impl_freeopcua/launch/: client.launch  server.launch
opcua_impl_freeopcua/scripts/: ros_server.py
opcua_impl_freeopcua/src/: opcua_client.cpp
opcua_impl_open62541/: CMakeLists.txt  package.xml
opcua_impl_open62541/common/src/: opcua_client.cpp
opcua_impl_open62541/launch/: server.launch
opcua_impl_open62541/src/: opcua_client.cpp  opcua_server.cpp
opcua_impl_python_opcua/: CMakeLists.txt  known_issues.md  package.xml
opcua_impl_python_opcua/scripts/: params.yaml  ros_actions.py  ros_client.py  ros_server.py  ros_services.py  ros_topics.py  rosopcua.launch
opcua_impl_ua_sdk/: CMakeLists.txt  package.xml
opcua_impl_ua_sdk/common/include/: SPOPCUAAux.h  SPOPCUAClient.h  SPOPCUASubscription.h  SPOPCUATypes.h
opcua_impl_ua_sdk/common/src/: SPOPCUAAux.cpp  SPOPCUAClient.cpp  SPOPCUASubscription.cpp  SPOPCUATypes.cpp
opcua_impl_ua_sdk/include/: client_node.h
opcua_impl_ua_sdk/launch/: client.launch
opcua_impl_ua_sdk/src/: opcua_client.cpp
opcua_msgs/: CMakeLists.txt  package.xml
opcua_msgs/msg/: Address.msg  TypeValue.msg
opcua_srvs/: CMakeLists.txt  package.xml
opcua_srvs/srv/: CallMethod.srv  Connect.srv  ListNode.srv  Read.srv  Subscribe.srv  Unsubscribe.srv  Write.srv
ros_opcua_communication/: CMakeLists.txt  package.xml
ros_opcua_impl_freeopcua/: CMakeLists.txt  README.md  package.xml
ros_opcua_impl_freeopcua/include/: opcua_helpers.h
ros_opcua_impl_freeopcua/launch/: client.launch  server.launch
ros_opcua_impl_freeopcua/scripts/: ros_server.py
ros_opcua_impl_freeopcua/src/: opcua_client.cpp  variprog_opcua_client.cpp
ros_opcua_impl_python_opcua/: CMakeLists.txt  README.md  known_issues.md  package.xml
ros_opcua_impl_python_opcua/config/: params.yaml
ros_opcua_impl_python_opcua/export/: message.xml
ros_opcua_impl_python_opcua/launch/: opcuaclient.launch  rosopcua.launch  rosopcua_parse_and_export_ros_message.launch
ros_opcua_impl_python_opcua/scripts/: basic_server_client.py  message.xml  new_message.xml  opcua_client_application_example.py  opcua_client_application_example_ros.py  opcua_viewer_script_example.py  params.yaml  ros_actions.py  ros_client.py  ros_global.py  ros_info_manage.py  ros_messages.py  ros_opc_ua.py  ros_opc_ua_client.py  ros_opc_ua_comm.py  ros_opcua_viewer.py  ros_server.py  ros_server2.py  ros_server_export_message.py  ros_server_to_export_message.py  ros_services.py  ros_topics.py  ros_ua_client_example.py  rosopcua.launch
ros_opcua_msgs/: CMakeLists.txt  package.xml
ros_opcua_msgs/msg/: Address.msg  TypeValue.msg
ros_opcua_srvs/: CMakeLists.txt  package.xml
ros_opcua_srvs/srv/: CallMethod.srv  Disconnect.srv  ListNode.srv  Read.srv  Subscribe.srv  Unsubscribe.srv  Write.srv
