<?xml version="1.0"?>
<package>
  <name>opcua_communication</name>
  <version>0.1.0</version>
  <description>The opcua_communication mate-package are ROS bidings for different open-source OPC-UA implementations. Following libraries are used FreeOpcUa, open62541.</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>

  <license>LGPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/opcua_communication</url> -->
  <!-- <url type="repository">http://github.com/iirob/opcua_communication</url> -->
  <!-- <url type="bugtracker">http://github.com/iirob/opcua_communication/issues</url> -->

  <author email="denis.stogl@kit.edu">Denis Štogl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>opcua_impl_freeopcua</run_depend>
  <run_depend>opcua_impl_open62541</run_depend>
  <run_depend>opcua_msgs</run_depend>
  <run_depend>opcua_srvs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>