<?xml version="1.0"?>
<package>
  <name>opcua_srvs</name>
  <version>0.1.0</version>
  <description>The opcua_srvs package implements ROS-services for opcua_communication metapackage.</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>

  <license>LGPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/opcua_srvs</url> -->

  <author email="denis.stogl@kit.edu">Denis Štogl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>opcua_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opcua_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>


</package>