<?xml version="1.0"?>
<package format="2">
  <name>ros_opcua_impl_freeopcua</name>
  <version>0.2.0</version>
  <description>The ros_opcua_impl_freeopcua package implements bindings for freeopcua - Open Source C++ OPC-UA Server and Client Library.</description>

  <maintainer email="denis@stogl.de">Denis Štogl</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/ros_opcua_impl_freeopcua</url>
  <url type="repository">https://github.com/iirob/ros_opcua_communication</url>
  <url type="bugtracker">https://github.com/iirob/ros_opcua_communication/issues</url>

  <author email="denis.stogl@kit.edu">Denis Štogl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ros_opcua_msgs</depend>
  <depend>ros_opcua_srvs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  </package>
