<?xml version="1.0"?>
<package format="2">
  <name>ros_opcua_srvs</name>
  <version>0.2.0</version>
  <description>The ros_opcua_srvs package implements ROS-services for opcua_communication metapackage.</description>

  <maintainer email="denis.stogl@kit.edu">Denis Štogl</maintainer>

  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/ros_opcua_srvs</url>
  <url type="repository">https://github.com/iirob/ros_opcua_communication</url>
  <url type="bugtracker">https://github.com/iirob/ros_opcua_communication/issues</url>

  <author email="denis.stogl@kit.edu">Denis Štogl</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <depend>ros_opcua_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>